test/errors/array_types_error/zs/packed_array_extern_error.zs
package packed_array_extern_error;

struct PackedArrayExternError
{
    packed extern array[];
};
